on how to use the new sample files.

-------------------------------------------------------------------------------

Thu Oct 21 18:49:59 PDT 1999
(Mandrake)

forgot to add some files to the distribution package

-------------------------------------------------------------------------------

Fri Oct 22 12:10:12 PDT 1999
(Mandrake)

Minor patch for client title setting

-------------------------------------------------------------------------------

Fri Oct 22 23:27:28 PDT 1999
(Mandrake)

Max size now takes into account kde hints.

-------------------------------------------------------------------------------

Mon Oct 25 23:51:46 PDT 1999
(Mandrake)

fixed a potential coredump (though I'm not sure how that happened) in
ArrangeRects()

-------------------------------------------------------------------------------

Mon Oct 25 23:52:42 PDT 1999
(Raster)

add that to TODO for tomorrow...

-------------------------------------------------------------------------------

Tue Oct 26 09:08:15 PDT 1999
(Raster)

be a bit mroe paranoid about loading textclasses.

-------------------------------------------------------------------------------

Tue Oct 26 10:37:53 PDT 1999
(Raster)

be even more paranoid............ in arrangerects

-------------------------------------------------------------------------------

Tue Oct 26 13:54:25 PDT 1999
(Raster)

flim

-------------------------------------------------------------------------------

Tue Oct 26 14:04:00 PDT 1999
(Raster)

again.......

-------------------------------------------------------------------------------

Tue Oct 26 15:22:18 PDT 1999
(KainX)

Fixed another IPC syncing problem, this time with textclasses.

-------------------------------------------------------------------------------

Wed Oct 27 15:02:57 EST 1999
(Christian)

New backgrounds for the dialogs, menus and the documentation.
I grew bored with the old ones. Opinions welcome :)
