@@ -3781,3 +3781,10 @@ Wed Oct 27 15:02:57 EST 1999
 New backgrounds for the dialogs, menus and the documentation.
 I grew bored with the old ones. Opinions welcome :)
 
+
+-------------------------------------------------------------------------------
+
+Wed Oct 27 12:36:22 PDT 1999
+(Raster)
+
+some text so you know audio wasnt compiled in...
